Preparation 95% done: - How we access the real model mesh memory?? Using &?

--- a/3DObjectDeformation/3DObjectDeformation.vcxproj
+++ b/3DObjectDeformation/3DObjectDeformation.vcxproj
@@ -194,8 +194,10 @@ D:\Visual_Studio_Projects\of_v0.9.8_vs_release\addons\ofxGui\src;%(AdditionalInc
     <ClCompile Include="..\..\of_v0.9.8_vs_release\addons\ofxGui\src\ofxSlider.cpp" />
     <ClCompile Include="..\..\of_v0.9.8_vs_release\addons\ofxGui\src\ofxSliderGroup.cpp" />
     <ClCompile Include="..\..\of_v0.9.8_vs_release\addons\ofxGui\src\ofxToggle.cpp" />
+    <ClCompile Include="src\GreenCoordinate.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\ofApp.cpp" />
+    <ClCompile Include="src\Util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\of_v0.9.8_vs_release\addons\ofxAssimpModelLoader\libs\assimp\include\assimp\ai_assert.h" />
@@ -248,7 +250,9 @@ D:\Visual_Studio_Projects\of_v0.9.8_vs_release\addons\ofxGui\src;%(AdditionalInc
     <ClInclude Include="..\..\of_v0.9.8_vs_release\addons\ofxGui\src\ofxSlider.h" />
     <ClInclude Include="..\..\of_v0.9.8_vs_release\addons\ofxGui\src\ofxSliderGroup.h" />
     <ClInclude Include="..\..\of_v0.9.8_vs_release\addons\ofxGui\src\ofxToggle.h" />
+    <ClInclude Include="src\GreenCoordinate.h" />
     <ClInclude Include="src\ofApp.h" />
+    <ClInclude Include="src\Util.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(OF_ROOT)\libs\openFrameworksCompiled\project\vs\openframeworksLib.vcxproj">
