Done: - 95% of Object_3D class creation - Testing existing Object_3D class in ofApp class
To Do:
- Test the getParts function in Object_3D class
- Modify the GreenCoordinate class properly

--- a/3DObjectDeformation/3DObjectDeformation.vcxproj
+++ b/3DObjectDeformation/3DObjectDeformation.vcxproj
@@ -196,6 +196,7 @@
     <ClCompile Include="..\..\of_v0.9.8_vs_release\addons\ofxGui\src\ofxToggle.cpp" />
     <ClCompile Include="src\GreenCoordinate.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Object_3D.cpp" />
     <ClCompile Include="src\ofApp.cpp" />
     <ClCompile Include="src\Util.cpp" />
   </ItemGroup>
@@ -251,6 +252,7 @@
     <ClInclude Include="..\..\of_v0.9.8_vs_release\addons\ofxGui\src\ofxSliderGroup.h" />
     <ClInclude Include="..\..\of_v0.9.8_vs_release\addons\ofxGui\src\ofxToggle.h" />
     <ClInclude Include="src\GreenCoordinate.h" />
+    <ClInclude Include="src\Object_3D.h" />
     <ClInclude Include="src\ofApp.h" />
     <ClInclude Include="src\Util.h" />
   </ItemGroup>
